--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ nbformat==4.4.0
 notebook==6.0.2
 numba==0.46.0
 numpy==1.17.4
+pandas==1.0.5
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
@@ -44,6 +45,7 @@ Pygments==2.5.1
 pyparsing==2.4.5
 pyrsistent==0.15.6
 python-dateutil==2.8.1
+pytz==2020.1
 pyzmq==18.1.1
 qtconsole==4.6.0
 resampy==0.2.2
